fix more alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ h2 {
 
 #friends {
   margin: 10px;
-  margin-top: 10px;
+  margin-top: 150px;
   float: right;
 }
 
